<resources>
    <string name="app_name">Short Message Service</string>
    <string name="app_name_short">SMS app</string>
    <string name="app_screen_name">Sms Scheduler</string>
    <string name="app_contacts_name">Contacts</string>
    <string name="app_settings_name">Settings</string>

    <string name="text_hint_phone_number">Enter Phone Number</string>
    <string name="text_add_phone_number">Add more phone numbers:</string>
    <string name="text_add_phone_number_add_text">Add more phone numbers</string>
    <string name="text_hint_message">Enter message</string>

    <string name="schedule_sms_button_text">Schedule SMS</string>


    <string name="SnackBar_text_sms_scheduled">SMS has been scheduled</string>
    <string name="set_time_button_text">set time</string>
    <string name="set_time_clock">00:00</string>

    <string name="set_date_start_button_text">set date</string>
    <string name="set_date_start_date">0000–00–00</string>

    <string name="send_sms_every_text">send sms every</string>
    <string name="send_sms_every_day_text">Day</string>
    <string name="send_sms_every_week_text">Week</string>
    <string name="send_sms_every_month_text">Month</string>
    <string name="send_sms_every_year_text">Year</string>
    <string name="send_sms_every_now_text">One time (does not repeat)</string>

    <string name="history_name">Scheduled SMS</string>
    <string name="sms_notify_message_sent_number_text">Sent to:</string>
    <string name="sms_notify_message_sent_message_text">Message:</string>


    <string name="sms_time_travel_titel">You cannot go back in time</string>
    <string name="sms_time_travel_Text">This time has passed. Choose different time</string>

    <string name="sms_max_characters_titel">Max characters reached</string>
    <string name="sms_max_characters_Text">The maximum character limit is 160</string>
    <string name="sms_max_characters_Text_int">not</string>

    <string name="sms_no_permission_contacts_titel">Allow Short Message Service to show your contacts</string>
    <string name="sms_no_permission_contacts_text">This allows you to see all your contacts in your phone book. and then you can click on one of the contacts to avoid entering the number manually</string>

    <string name="sms_no_permission_sms_titel">Please enable SMS permission</string>
    <string name="sms_no_permission_sms_text">This allows your scheduled SMS messages to be sent</string>

    <string name="sms_number_or_masage_are_empty_titel">Number and message are required</string>
    <string name="sms_number_or_masage_are_empty_text">Please provide both phone number and message.</string>

    <string name="masage_are_empty_titel">Message are required</string>
    <string name="masage_are_empty_text">Please provide a message.</string>

    <string name="text_ok">OK</string>
    <string name="text_Cancel">Cancel</string>

    <string name="text_ask_give_permission_settings">Open settings</string>

    <string name="text_ask_give_permission">Give permission</string>
    <string name="text_ask_NO_permisson">NO!</string>

    <string name="No_contacts_found">No contacts found</string>

    <string name="todo">TODO</string>
    <string name="empty">.</string>
    <string name="history_info_no_SMS_scheduled">There are no SMS scheduled</string>

    <string name="history_info_PhoneNumber_name">Phone number:</string>
    <string name="history_info_Message_name">Message</string>
    <string name="history_info_Date_name">Date:</string>
    <string name="history_info_Time_name">Time:</string>
    <string name="history_info_Repeat_name">repeat every:</string>
    <string name="history_info_Repeat_every_name">every:</string>
    <string name="history_info_MoreSoon_name">More coming soon!</string>

    <string name="history_info_Profile_Send_to">Sends to</string>

    <string name="history_info_Profile_Edit_TimeAndDate_name">Edit time and date</string>
    <string name="history_info_Profile_Edit_Phone_number_name">Edit Phone numbers</string>
    <string name="history_info_Profile_Edit_Message_name">Edit message</string>
    <string name="history_info_Profile_Edit_Must_have_one_number">You must have at least one number</string>
    <string name="history_info_Profile_Edit_cannot_have_more_number">You cannot have more than</string>

    <string name="Custom_name">Custom</string>

    <string name="demo_text_160" translatable="false">The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz,.</string>

    <string name="save_name">Save</string>
    <string name="dont_save_name">Dont Save</string>
    <string name="ask_save_changes_Titel_name">Do you want to save the changes?</string>
    <string name="ask_save_changes_Text_name">You havent saved your changes. \n Do you want to save them?</string>
    <string name="puse">Pause</string>
    <string name="send_now_Titel">Send now!</string>
    <string name="send_now_Description">Do you want to send this SMS now?</string>
    <string name="exit_name">Exit</string>
    <string name="DeleteScheduleMessage">Delete Scheduled Message</string>
    <string name="delete_name">Delete</string>
    <string name="ReSceduleOrNotDialog_title">Do you want to reschedule?</string>

     <string name="More_Then_One_Number_name">numbers</string>
</resources>
