<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_screen_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:drawableEnd="@android:drawable/ic_input_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint_phone_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:hint="@string/text_hint_message"
        android:inputType="textImeMultiLine"
        android:textAlignment="center"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/SetTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time_button_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/pickTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds"
            android:text="@string/set_time_clock" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_date_start_button_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/SetDateStartText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds"
            android:text="@string/set_date_start_date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_sms_every_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/selectedSendEvery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds"
            android:text="@string/send_sms_every_year_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="12pt"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">
    </LinearLayout>

    <Button
        android:id="@+id/sendB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_sms_button_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/history_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/app_backgrund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</LinearLayout>
