<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnToMainSmsSchedulerPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/baseline_close"
                android:contentDescription="@string/exit_name" />

            <ImageView
                android:id="@+id/btnToSendScheduledMessageNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/btnToMainSmsSchedulerPage"
                android:layout_toStartOf="@id/btnToDelayScheduledMessage"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/baseline_send"
                android:contentDescription="@string/send_now"/>

            <ImageView
                android:id="@+id/btnToDelayScheduledMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_alignTop="@id/btnToMainSmsSchedulerPage"
                android:layout_toStartOf="@id/btnToDeleteScheduledMessage"
                app:srcCompat="@drawable/baseline_pause"
                android:contentDescription="@string/DelayScheduleMessage" />

            <ImageView
                android:id="@+id/btnToDeleteScheduledMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/btnToMainSmsSchedulerPage"
                android:layout_marginStart="10dp"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_baseline_delete_outline"
                android:contentDescription="@string/DeleteScheduleMessage" />
        </RelativeLayout>
        <TextView
            android:id="@+id/Profile_History_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/history_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:singleLine="true"
            android:textStyle="bold|italic"
            android:typeface="normal"
            tools:ignore="TextSizeCheck" />
        <TextView
            android:id="@+id/Profile_History_ID_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/Custom_name"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:typeface="normal"
            tools:ignore="TextSizeCheck" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/Profile_History_group_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_person_24"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"
                    android:contentDescription="TODO" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/history_info_date_and_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_date_start_date"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:textStyle="bold" />

                </LinearLayout>
                <ImageView
                    android:id="@+id/btn_Edit_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTintMode="src_over"
                    android:clickable="true"
                    android:contentDescription="To Edit"
                    app:srcCompat="@drawable/ic_baseline_edit_24"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,RtlHardcoded,TouchTargetSizeCheck"
                    android:focusable="true" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/history_info_Profile_Send_to"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:typeface="normal"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:cardCornerRadius="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
            <TextView
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingStart="8sp"
                android:paddingTop="8sp"
                android:paddingEnd="8sp"
                android:paddingBottom="8sp"
                android:text="@string/app_contacts_name"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="15sp" />

                <ImageView
                    android:id="@+id/btn_Edit_Contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="src_over"
                    android:clickable="true"
                    android:contentDescription="To Edit"
                    android:layout_gravity="bottom|right"
                    app:srcCompat="@drawable/ic_baseline_edit_24"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,RtlHardcoded,TouchTargetSizeCheck"
                    android:focusable="true" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/App_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/history_info_Message_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:typeface="normal"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                    <TextView
                        android:id="@+id/Profile_History_Message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_text_160"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/btn_Edit_Message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="src_over"
                    android:clickable="true"
                    android:contentDescription="To Edit"
                    android:layout_gravity="bottom|right"
                    app:srcCompat="@drawable/ic_baseline_edit_24"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,RtlHardcoded,TouchTargetSizeCheck"
                    android:focusable="true" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="15dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/button2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>